--- a/Burgess Modern Day Warriors/contact.html
+++ b/Burgess Modern Day Warriors/contact.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
+<div class="container">
+
 	<a href="http://s1096.photobucket.com/user/clnquacky/media/logo.jpg.html" target="_blank">
 	<img src="http://i1096.photobucket.com/albums/g327/clnquacky/logo.jpg" border="0" alt=" photo logo.jpg" height="250px" width=80%/></a>
 
@@ -48,3 +50,7 @@
 
 </div>
 </body>
+<footer>
+    <p>Copyright © Charlotte Norford 2017. All Rights Reserved</p>
+  </footer>
+  </div>
