--- a/Burgess Modern Day Warriors/index.html
+++ b/Burgess Modern Day Warriors/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE HTML>
 <head> 
 <link rel="stylesheet", type="text/css", href="style.css">
+<title>Burgess Modern Day Warriors Karate </title>
 </head>
 
 <body>
+<div class="container">
 	<a href="http://s1096.photobucket.com/user/clnquacky/media/logo.jpg.html" target="_blank">
-	<img src="http://i1096.photobucket.com/albums/g327/clnquacky/logo.jpg" border="0" alt=" photo logo.jpg" height="400px" width=100%/></a>
+	<img src="http://i1096.photobucket.com/albums/g327/clnquacky/logo.jpg" border="0" alt=" photo logo.jpg" height="250px" width=100%/></a>
 
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -17,7 +19,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href=index.html>Home</a></li>
 				<li><a href="classes.html">Classes</a></li>
-				<li><a href="aboutsensi.html">About Sensi Lee</a></li>
+				<li><a href="aboutsensi.html">About Sensei Lee</a></li>
 				<li><a href="schedule.html">Schedule and Fees</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
@@ -123,3 +125,4 @@
 <footer>
     <p>Copyright © Charlotte Norford 2017. All Rights Reserved</p>
   </footer>
+  </div>
