--- a/Burgess Modern Day Warriors/aboutsensi.html
+++ b/Burgess Modern Day Warriors/aboutsensi.html
@@ -3,6 +3,8 @@
 <link rel="stylesheet", type="text/css", href="style.css">
 </head>
 <body>
+<div class="container">
+
 	<a href="http://s1096.photobucket.com/user/clnquacky/media/logo.jpg.html" target="_blank">
 	<img src="http://i1096.photobucket.com/albums/g327/clnquacky/logo.jpg" border="0" alt=" photo logo.jpg" height="250px" width=80%/></a>
 
@@ -35,3 +37,8 @@
 	Sensei Lee also has a professional record of 19-1 in Muay Thai Kickboxing and a 4-1 record in MMA (Mixed Martial Arts).
 </div>
 <!-- </body> -->
+</body>
+<footer>
+    <p>Copyright © Charlotte Norford 2017. All Rights Reserved</p>
+  </footer>
+  </div>
