--- a/Burgess Modern Day Warriors/schedule.html
+++ b/Burgess Modern Day Warriors/schedule.html
@@ -3,6 +3,8 @@
 <link rel="stylesheet", type="text/css", href="style.css">
 </head>
 <body>
+<div class="container">
+
 	<a href="http://s1096.photobucket.com/user/clnquacky/media/logo.jpg.html" target="_blank">
 	<img src="http://i1096.photobucket.com/albums/g327/clnquacky/logo.jpg" border="0" alt=" photo logo.jpg" height="250px" width=80%/></a>
 
@@ -45,3 +47,7 @@ Fees: $35 per month for Lil' Warriors Classes<br>
    11:00 am to 1:30pm Competition Class<br>
 </div>
 </body>
+<footer>
+    <p>Copyright © Charlotte Norford 2017. All Rights Reserved</p>
+  </footer>
+  </div>
